--- a/public/css/test.css
+++ b/public/css/test.css
@@ -21,3 +21,22 @@ button, type-a{
     left:300px;
     z-index: 5;
 }
+
+li{
+    list-style: none;
+    padding:1rem;
+    display:flex;
+    background-color:#eee;
+    margin-bottom:1rem;
+}
+li, ul{
+    flex-direction:row;
+    justify-content:flex-end;
+    align-items:center;
+}
+table,th,td{
+    /* border-collapse: collapse;
+    border:1px solid #333; */
+    padding:0 0.5rem;
+    /* text-align: center; */
+}
